# fy3-cloudmask

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
.claude/: settings.local.json
coeff/coeff/: fylat_thresholds.mersi.ii3d.v8
config/: default.yaml
config/sensors/: fy3d_mersi_ii.yaml
config/thresholds/: mersi_ii3d_v8.yaml
docs/: codebase_learning_guide.md  deployment_and_performance.md  fortran_optimization_progress.md
docs/code_review/: migration_bug_report.md
ext/: CMakeLists.txt  Makefile  README.md  build.sh  cloudmask_pybind.cpp
ext/include/: cloudmask_engine.hpp
plans/: goals.md  original_vs_new_diff.md  salt_pepper_noise_analysis.md
scripts/: analyze_clm_output.py  analyze_threshold_distributions.py  backend_compare_and_viz.py  check_confidence.py  compare_myd35.py  compare_py_f90.py  compare_py_f90_results.py  compare_strip.py  convert_thresholds.py  debug_confidence.py  debug_polar_isolated.py  diagnose_clm_channels.py  find_matched_files.py  fix_apollo_gates.py  fix_nmtests.py  process_20200308_3orbits.py  process_20200308_f90.py  remove_standalone_ngtests.py  run_f90_direct.py  run_fortran_only.py  run_python_ref.py  spatial_analysis.py  test_recalibration.py  uncomment_pfmft_nfmft_v2.py  validate_cloudmask.py
src/fortran/c_api/: cloudmask_c_api.f90  cloudmask_data_arrays.f90
src/fortran/cloudmask/: Antarctic_day.f90  Antarctic_day_thr.inc  Day_snow.f90  Day_snow_thr.inc  LandDay.f90  LandDay_coast.f90  LandDay_coast_thr.inc  LandDay_desert.f90  LandDay_desert_c.f90  LandDay_desert_c_thr.inc  LandDay_desert_thr.inc  LandDay_thr.inc  LandNite.f90  LandNite_thr.inc  Nite_snow.f90  Nite_snow_thr.inc  PolarDay_coast.f90  PolarDay_coast_thr.inc  PolarDay_desert.f90  PolarDay_desert_c.f90  PolarDay_desert_c_thr.inc  PolarDay_desert_thr.inc  PolarDay_land.f90  PolarDay_land_thr.inc  PolarDay_ocean.f90  PolarDay_ocean_thr.inc  PolarDay_snow.f90  PolarDay_snow_thr.inc  PolarNite_land.f90  PolarNite_land_thr.inc  PolarNite_ocean.f90  PolarNite_ocean_thr.inc  PolarNite_snow.f90  PolarNite_snow_thr.inc  check_bits.f  check_qa_bits.f  chk_coast.f90  chk_land.f90  chk_land_nite.f90  chk_shallow_water.f  (+45 more)
src/fortran/core/: constant.f90  data_arrays_module.f90  frontend_module.f90  names_module.f90  numerical.f90  planck_module.f90  platform_module.f90
src/fortran/utils/: optmed.c  optmed_int1.c  strcompress.f  strlen.f  strlower.f  strpos.f
src/fy3_cloudmask/: __init__.py  __main__.py  cli.py  config.py  constants.py  pipeline.py
src/fy3_cloudmask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fy3_cloudmask/algorithm/: __init__.py  bitops.py  cloud_mask.py  confidence.py  native_backend.py  spatial.py  surface_classifier.py
src/fy3_cloudmask/algorithm/__pycache__/: bitops.check_bit-50.py310.1.nbc  bitops.check_bit-50.py310.nbi  bitops.check_bit-50.py311.1.nbc  bitops.check_bit-50.py311.nbi  bitops.clear_bit-37.py310.1.nbc  bitops.clear_bit-37.py310.2.nbc  bitops.clear_bit-37.py310.3.nbc  bitops.clear_bit-37.py310.nbi  bitops.clear_bit-37.py311.1.nbc  bitops.clear_bit-37.py311.2.nbc  bitops.clear_bit-37.py311.3.nbc  bitops.clear_bit-37.py311.nbi  bitops.convert_cloud_mask-252.py310.1.nbc  bitops.convert_cloud_mask-252.py310.nbi  bitops.convert_cloud_mask-252.py311.1.nbc  bitops.convert_cloud_mask-252.py311.nbi  bitops.fill_bit_pixel-93.py310.1.nbc  bitops.fill_bit_pixel-93.py310.nbi  bitops.fill_bit_pixel-93.py311.1.nbc  bitops.fill_bit_pixel-93.py311.nbi  bitops.init_qa_bits-83.py310.1.nbc  bitops.init_qa_bits-83.py310.nbi  bitops.init_qa_bits-83.py311.1.nbc  bitops.init_qa_bits-83.py311.nbi  bitops.init_testbits-66.py310.1.nbc  bitops.init_testbits-66.py310.nbi  bitops.init_testbits-66.py311.1.nbc  bitops.init_testbits-66.py311.nbi  bitops.proc_path-170.py310.1.nbc  bitops.proc_path-170.py310.nbi  bitops.proc_path-170.py311.1.nbc  bitops.proc_path-170.py311.nbi  bitops.set_bit-24.py310.1.nbc  bitops.set_bit-24.py310.10.nbc  bitops.set_bit-24.py310.11.nbc  bitops.set_bit-24.py310.2.nbc  bitops.set_bit-24.py310.3.nbc  bitops.set_bit-24.py310.4.nbc  bitops.set_bit-24.py310.5.nbc  bitops.set_bit-24.py310.6.nbc  (+64 more)
src/fy3_cloudmask/algorithm/tests/: __init__.py  land_day.py  land_nite.py  ocean_day.py  ocean_nite.py  polar_day.py  polar_nite.py  restoral.py  snow_tests.py
src/fy3_cloudmask/data/: __init__.py
src/fy3_cloudmask/io/: recalibration.py
src/fy3_cloudmask/output/: __init__.py  cloud_amount.py  writer.py
tests/: test_algorithms.py  test_cloud_mask.py  test_pipeline_e2e.py
visualize/: figure_1.py  figure_2.py  io_mersi.py  io_myd35.py  plot_utils.py  run_validation.py  visualize_clm.py
